scss/styles.scss
@import 'material';
@import 'dialog-polyfill';
@import 'flickity';
body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
}


/* Colors */

$primaryColor: #014b82;
$accentColor: #0095DA;
$grey: #ECECEC;
$darkGrey: #424242;

/* Base */

html,
body {
    height: 100%;
    overflow: hidden;
}

img {
    max-width: 100%;
    height: auto;
}

.icon {
    display: inline-block;
    width: 1em;
    height: 1em;
    stroke-width: 0;
    stroke: currentColor;
    fill: currentColor;
}

input,
select,
button {
    -webkit-appearance:none;
    border-radius: 0;
}
select.mdl-textfield__input {
    background-image: url(/select-bg.svg);
    background-repeat: no-repeat;
    background-position: right 5px center;
    background-size: 0.8em 0.8em;
}

/* Header */

.mdl-layout-title {
    font-stretch: condensed;
    font-style: italic;
    font-weight: bold;
}

.mdl-layout__header-row {
    padding-left: 16px;
    /* to override the extra padding caused by having no top menu */
}
.mdl-layout__header {
    background-color: $primaryColor;
}

.icon-title-horizontal {
    width: auto;
    height: 1.4em;
}

/* Body */

h1 {
    font-size: 3em;
    opacity: .5;
    margin-top: 0;
}

h2 {
    margin-bottom: 0;
}

.subheader {
    font-size: 1.5em;
    font-weight: 200;
}

.page-content {
    height: 100%;
    padding: 16px;
}

.mdl-textfield {
    width: 100%;
}

.dark-bg {
    background: #014b82;
    background: -moz-linear-gradient(top, #014b82 0%, #003167 100%);
    background: -webkit-linear-gradient(top, #014b82 0%,#003167 100%);
    background: linear-gradient(to bottom, #014b82 0%,#003167 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#014b82', endColorstr='#003167',GradientType=0 );
    color: #fff;
    /* Lighten forms */
    .mdl-textfield .mdl-textfield__input {
        border-bottom-color: rgba(255, 255, 255, .5);
    }
    .mdl-textfield .mdl-textfield__label {
        color: rgba(255, 255, 255, 1);
    }
    .mdl-textfield.is-focused .mdl-textfield__label,
    .mdl-textfield--floating-label .mdl-textfield__label {
        color: rgba(255, 255, 255, .75);
    }
    .mdl-textfield__label:after {
        background-color: $accentColor;
    }
    .mdl-button--raised {
        background: #fff;
    }
    option,
    optgroup {
        color: #212121;
    }
    select[name="finishing"] option,
    select[name="finishing"] optgroup {
        color: #fff;
    }
}


/* Footer Navigation */

.bottom-nav {
    border-top: 1px solid #eee;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    background: #fff;
    z-index: 1;
    transform: translateY(0);
    transition: transform 400ms cubic-bezier(0.4, 0.0, 0.2, 1);
    ul {
        list-style: none;
        display: flex;
        margin: 0 auto;
        max-width: 610px;
        padding: 0;
        align-items: center;
        justify-content: space-around;
        text-align: center;
    }
    li {
        flex-grow: 1;
    }
    a {
        text-decoration: none;
        color: #888;
        display: block;
        padding: 5px 16px 0;
        font-weight: 300;
        font-size: .815em;
        position: relative;
        &:hover,
        &:focus {
            color: $primaryColor;
        }
        &.active {
            color: $accentColor;
        }
    }
    .count {
        position: absolute;
        top: 0;
        background: red;
        color: #fff;
        display: block;
        padding: 3px;
        line-height: 1;
        border-radius: 10px;
        min-width: 1em;
        height: 1em;
        left: 51%;
        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
        transform: scale(0);
        animation-name: popIn;
        animation-duration: 200ms;
        animation-timing-function: cubic-bezier(0.09, 0.33, 0, 1.84);
        animation-fill-mode: forwards;
    }
    svg {
        display: block;
        margin: auto;
        font-size: 2em;
    }
}
@keyframes popIn {
    from {transform: scale(0);}
    to {transform: scale(1);}
}
.position-static .bottom-nav {
    transform: translateY(100%);
    transition: transform 400ms cubic-bezier(0.4, 0.0, 0.2, 1);
}


/* Login Screen */
.icon-title {
    margin: auto;
    display: block;
    height: auto;
    width: auto;
}
.login {
    position: fixed;
    z-index: 9999;
    top: 0;
    left: 0;
    right: 0;
    height: 100%;
    padding: 1em;
    opacity: 1;
    visibility: visible;
    img {
        display: block;
        margin: 6em auto 2em;
    }
    form {
        max-width: 300px;
        margin: auto;
    }
}


/* Quotes Page */

.quote-page {
    .page-content {
        padding: 0;
        h2,
        p {
            padding: 0 16px;
        }
    }
    .quote-form {
        height: 100%;
    }
    .quote-carousel {
        height: 100%;
        fieldset {
            width: 100%;
            height: 100%;
            max-width: 600px;
            border-right: 1px solid rgba(255, 255, 255, 0.05);
        }
    }
    .flickity-page-dots {
        transform: translateY(-6.5em);
        transition: transform 150ms cubic-bezier(0.4, 0.0, 0.2, 1);
        .dot {
            background: #fff;
        }
    }
    .mdl-grid--no-spacing {
        padding: 0 16px;
        >.mdl-cell {
            text-align: center;
            &.mdl-cell--1-col {
                width: 8.333%;
            }
            &.mdl-cell--2-col {
                width: 16.666%;
            }
            &.mdl-cell--4-col {
                width: 33.333%;
            }
            &.mdl-cell--5-col {
                width: 41.666%;
            }
            &.mdl-cell--6-col {
                width: 50%;
            }
            &.mdl-cell--8-col {
                width: 66.666%;
            }
        }
    }
    /* Custom Form Inputs */
    input[type="radio"],
    input[type="file"] {
        width: 0.1px;
        height: 0.1px;
        opacity: 0;
        overflow: hidden;
        position: absolute;
        z-index: -1;
        &:checked ~ label,
        &:focus ~ label {
            background: darken($primaryColor, 10%)
        }
        ~ label {
            display: block;
            text-align: center;
            padding: .5em 1em;
            border-radius: .5em;
            position: relative;
            svg {
                display: block;
                font-size: 4em;
                margin: auto;
            }
        }
    }
    .icon-check {
        position: absolute;
        opacity: 0;
        font-size: .5em;
        left: 50%;
        top: 40%;
        transition: transform 200ms cubic-bezier(0.4, 0.0, 0.2, 1) .5s, opacity 150ms cubic-bezier(0.4, 0.0, 0.2, 1) .5s;
        transform-origin: center;
        transform: scale(0) translate(-50%, -50%);
    }
    .uploaded .icon-check {
        opacity: 1;
        transform: scale(1) translate(-50%, -50%);
    }
    .icon-camera {
        opacity: 1;
        transform: scale(1);
        transition: all 100ms cubic-bezier(0.4, 0.0, 0.2, 1) .25s;
    }
    .uploaded .icon-camera {
        opacity: 0;
        transform: scale(0)
    }
    .swipe-hint {
        text-align: center;
        position: absolute;
        bottom: 6rem;
        font-size: 7em;
        width: 100%;
        opacity: 0;
        visibility: hidden;
        transition: opacity 2s ease 1.5s;
    }
    @keyframes swiping {
        0% {
            transform: translateX(0px);
        }
        15% {
            transform: translateX(25px);
        }
        30% {
            transform: translateX(-50px);
        }
        60% {
            transform: translateX(25px);
        }
        75% {
            transform: translateX(-50px);
        }
        100% {
            transform: translateX(0px);
        }
    }
    .started .swipe-hint {
        opacity: 1;
        visibility: visible;
        .icon {
            animation-name: swiping;
            animation-duration: 2.5s;
            animation-delay: 3s;
            animation-timing-function: ease-in-out;
        }
    }
}

.mdl-dialog h4,
.mdl-dialog p {
    opacity: 0;
    transition: all 100ms cubic-bezier(0.4, 0.0, 0.2, 1);
}

.quote-sent .mdl-dialog h4,
.quote-sent .mdl-dialog p {
    opacity: 1;
}

.mdl-spinner {
    display: block;
    margin: auto;
    position: absolute;
    left: 40%;
}

.position-static .flickity-page-dots {
    transform: translateY(100%);
    transition: transform 300ms cubic-bezier(0.4, 0.0, 0.2, 1) 100ms;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.fadeIn {
    animation-name: fadeIn;
    animation-duration: 1s;
    animation-fill-mode: both;
}

@keyframes fadeOut {
    0% {
        opacity: 1;
    }
    99% {
        opacity: 0;
    }
    100% {
        visibility: hidden;
        opacity: 0;
    }
}

.fadeOut {
    animation-name: fadeOut;
    animation-duration: 1s;
    animation-fill-mode: both;
}

// History Page
.history-page {
    .card-grid {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-around;
    }
    .page-content {
        padding-bottom: 4em;
    }
    .history-card-wide.mdl-card {
        margin: 0 .5em 1em;
        flex-grow: 1;
        > .mdl-card__title {
            color: #fff;
            padding-top: 5em;
            background-position: center;
            background-size: cover;
            background-color: $primaryColor;
        }
        > .mdl-card__menu {
            color: #fff;
        }
    }
}

